--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "ts-node-dev": "^2.0.0",
@@ -15,6 +16,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
