--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/multer": "^1.4.7",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
   },
@@ -23,6 +24,7 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.1",
+    "multer": "^1.4.5-lts.1",
     "prisma": "^5.1.1"
   }
 }
